--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
                         <span class="sr-only">Toggle navigation</span>
                         <i class="fa fa-bars fa-2x"></i>
                     </button>
-                    <a class="navbar-brand" href="#"><strong>PHOTO</strong>GRAPHER</a>
+                    <a class="navbar-brand" href="#"><strong>I</strong>Operation</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#carousel-header">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#blog">Blog</a></li>
-                        <li><a href="#social">Social</a></li>
+                      
                     </ul>
                 </div><!--/.navbar-collapse -->
             </div>
