--- a/reparticiones/PlanAgregado.html
+++ b/reparticiones/PlanAgregado.html
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</p>
 				</div>
 				<div class="blog-left-text">
-					<p class="Integer ante">Trabajo Final</p>
+					<p class="Integer ante">Plan agregado</p>
 						<ul>
 							<li class="chat"><a href="#">Investigación de operaciones</a></li>
 							<li class="box"><a href="#">Tercer ciclo</a></li>
