--- a/reparticiones/Problema.html
+++ b/reparticiones/Problema.html
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</p>
 				</div>
 				<div class="blog-left-text">
-					<p class="Integer ante">Trabajo Final</p>
+					<p class="Integer ante">Definir y resolver un problema</p>
 						<ul>
 							<li class="chat"><a href="#">Investigación de operaciones</a></li>
 							<li class="box"><a href="#">Tercer ciclo</a></li>
@@ -110,7 +110,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 			<div class="blog-left-fig">
-				<img src="images/planta.png" alt=" " />
+				<img src="images/problema.jpg" alt=" " />
 			</div>
 			<p class="variation">En esta oportunidad resolvere un caso de programación 
 			lineal en Lingo y epxplicaré algunos conceptos básicos. </span></p>
