--- a/reparticiones/trabajoFinal.html
+++ b/reparticiones/trabajoFinal.html
@@ -110,7 +110,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"> </div>
 			</div>
 			<div class="blog-left-fig">
-				<img src="images/planta.png" alt=" " />
+				<img src="images/trabajo.jpg" alt=" " />
 			</div>
 			<p class="variation">En esta oportunidad resolvere un caso de programación 
 			lineal en Lingo y epxplicaré algunos conceptos básicos. </span></p>
