--- a/reparticiones/PlanAgregado.html
+++ b/reparticiones/PlanAgregado.html
@@ -135,23 +135,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 					</div>
 					<div class="clearfix"> </div>
-					<p class="lorem">Una empresa energética colombiana dispone de cuatro plantas de generación para satisfacer la demanda diaria eléctrica en cuatro ciudades, Cali, Bogotá, Medellín y Barranquilla. Las plantas 1, 2,3 y 4 pueden satisfacer 80, 30, 60 y 45 millones de KW al día respectivamente. Las necesidades de las ciudades de Cali, Bogotá, Medellín y Barranquilla son de 70, 40, 70 y 35 millones de Kw al día respectivamente.</p>
- 
-Los costos asociados al envío de suministro energético por cada millón de KW entre cada planta y cada ciudad son los registrados en la siguiente tabla.
-
-<img src="images/20.png" alt=" "/>
-
-
-Además el precio de venta de suministro energético por cada millón de KW entre cada planta y cada ciudad son los registrados en la siguiente tabla.
-
-<img src="images/30.png" alt=" "/>
-
-
-Formule un modelo de programación lineal que permita satisfacer las necesidades de todas las ciudades y que maximice las utilidades.
-
-Para ver la solución
-
-<a href=https://www.youtube.com/watch?v=oBaKJdL63-k> Dar Click Aqui
 								</a>
 			<!-- blog -->
 	<div class="blog1">
@@ -164,7 +147,7 @@ Para ver la solución
 					</p>
 				</div>
 				<div class="blog-left-text">
-					<p class="Integer ante">Prática Calificada 3</p>
+					<p class="Integer ante">Research Operation</p>
 						<ul>
 							<li class="chat"><a href="#">Investigación de operaciones</a></li>
 							<li class="box"><a href="#">Tercer ciclo</a></li>
