--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 
         <footer class="content-block content-block-dark">
-            <p>&copy; Copyright Photographer 2014</p>
+            <p>&copy; Copyright Razer 2015</p>
         </footer>     
 
         <script src="js/jquery-2.1.3.min.js"></script>
